# staubli_driver_ros2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md
.docker/: .env  Dockerfile  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: ci-format.yml  ci.yml  docker.yml  documentation.yml
staubli_bringup/: CMakeLists.txt  package.xml
staubli_bringup/config/: controllers.yaml
staubli_bringup/launch/: launch_demo.launch.py  launch_moveit.launch.py  launch_robot_control.launch.py
staubli_bringup/plotjuggler/: joint_trajectory_control.xml
staubli_bringup/rviz/: default.rviz
staubli_bringup/scripts/: wait_for_robot_description.py  wait_for_robot_ready.py
staubli_driver_ros2/: CMakeLists.txt  README.md  package.xml  requirements.txt
staubli_driver_ros2/doxygen/: Doxyfile  mainpage.md
staubli_driver_ros2/sphinx/: conf.py  index.rst  index_pdf.rst  toc.rst
staubli_driver_ros2/sphinx/demo_applications/: diagnostics.rst  get_robot_logs.rst  gpios.rst  moveit2.rst  moveit2_docker.rst  troubleshooting.rst
staubli_driver_ros2/sphinx/developer_guide/: API.rst  add_your_robot.rst
staubli_driver_ros2/sphinx/driver_design/: communication_protocol.rst  driver_architecture.rst  roadmap.rst  robot_description.rst
staubli_driver_ros2/sphinx/frontmatter_pdf/: disclaimer.rst  intro.rst  toc.rst
staubli_driver_ros2/sphinx/quickstart/: available_models.rst  bringup.rst  installation_ros2.rst  installation_val3.rst  overview.rst
staubli_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
staubli_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  staubli_servo.yaml
staubli_moveit_config/launch/: staubli_moveit.launch.py
staubli_moveit_config/srdf/: staubli.srdf.xacro  staubli_macro.srdf.xacro
staubli_moveit_config/test/: test_default_srdf.py
staubli_robot_description/: CMakeLists.txt  package.xml
staubli_robot_description/config/: initial_positions.yaml
staubli_robot_description/config/tx2_60l/: dynamics.yaml  joint_limits.yaml  kinematics.yaml  meshes.yaml  robot_model.yaml
staubli_robot_description/config/tx2_60l_med/: kinematics.yaml  meshes.yaml  robot_model.yaml
staubli_robot_description/env-hooks/: staubli_robot_description.sh.in
staubli_robot_description/launch/: view_robot.launch.py
staubli_robot_description/meshes/tx2_60/: README.md
staubli_robot_description/meshes/tx2_60/collision/: base_link.stl  link_1.stl  link_2_L.stl  link_3.stl  link_4_L.stl  link_5.stl  link_6.stl  link_6_L_med.stl
staubli_robot_description/meshes/tx2_60/visual/: base_link.dae  link_1.dae  link_2_L.dae  link_3.dae  link_4_L.dae  link_5.dae  link_6.dae  link_6_L_med.dae
staubli_robot_description/r2c/: staubli.r2c.xacro
staubli_robot_description/r2c/include/: staubli_r2c_gpios.xacro  staubli_r2c_joints.xacro
staubli_robot_description/rviz/: view_robot.rviz
staubli_robot_description/test/: test_default_urdf.py  test_launch_mocked.py
staubli_robot_description/urdf/: staubli.urdf.xacro  staubli_macro.xacro
staubli_robot_description/urdf/include/: default_names.yaml  staubli_colors.xacro  staubli_helpers.xacro  staubli_materials.xacro
staubli_robot_driver/: CMakeLists.txt  README.md  package.xml  staubli_hardware_interface.xml
staubli_robot_driver/include/staubli_robot_driver/: mock_robot_server.hpp  real_time_socket_interface.hpp  real_time_socket_subscriber.hpp  robot_driver.hpp  robot_driver_helpers.hpp  staubli_hardware_interface.hpp  types.hpp
staubli_robot_driver/include/staubli_robot_driver/communication/: messages.hpp  protocol.hpp  serialization.hpp  socket.hpp  tcp_socket.hpp  udp_socket.hpp
staubli_robot_driver/scripts/: download_logs.py  remove_val3_server.py  show_logs.py  upload_val3_server.py
staubli_robot_driver/src/: mock_robot_server.cpp  real_time_socket_interface.cpp  real_time_socket_subscriber.cpp  robot_driver.cpp  staubli_hardware_interface.cpp  test_receive_robot_state.cpp
staubli_robot_driver/src/communication/: messages.cpp  protocol.cpp  socket_factory.cpp  tcp_socket.cpp  udp_socket.cpp  udp_socket_impl.hpp
staubli_robot_driver/staubli_robot_driver/: staubli_ftp.py  staubli_ftp_utils.py
staubli_robot_driver/test/unit_tests/: test_mock_robot_server.cpp  test_robot_driver.cpp  test_staubli_hardware_interface.cpp  test_staubli_hardware_interface.hpp
staubli_robot_driver/test/unit_tests/communication/: test_message_serialization.cpp  test_primitives_serialization.cpp  test_rt_socket_interface.cpp  test_sockets.cpp
staubli_robot_driver/val3/: README.md
staubli_robot_driver/val3/configs/: sio.cfx
staubli_robot_driver/val3/userapp/ros2_server/: controlTask.pgx  ros2_server.dtx  ros2_server.pjx  start.pgx  stop.pgx  updateState.pgx
staubli_robot_driver/val3/userapp/ros2_server/Comm/: computeSequenceDelay.pgx  getNextSequenceNumber.pgx  readData.pgx  readDataOnce.pgx  resetControlSocket.pgx  sendData.pgx
staubli_robot_driver/val3/userapp/ros2_server/Control/: stopJointPositionControl.pgx  stopJointVelocityControl.pgx  updateJointPositionControl.pgx  updateJointVelocityControl.pgx
staubli_robot_driver/val3/userapp/ros2_server/Serialization/: decodeHeader.pgx  decodeRobotCommandMsg.pgx  encodeHeader.pgx  encodeRobotStateMsg.pgx  initHeader.pgx  initRobotCommandMsg.pgx  initRobotStateMsg.pgx
staubli_robot_driver/val3/userapp/ros2_server/Types/MessageHeader/: MessageHeader.dtx  MessageHeader.pjx
staubli_robot_driver/val3/userapp/ros2_server/Types/RobotCommand/: RobotCommand.dtx  RobotCommand.pjx
staubli_robot_driver/val3/userapp/ros2_server/Types/RobotCommandMsg/: RobotCommandMsg.dtx  RobotCommandMsg.pjx
staubli_robot_driver/val3/userapp/ros2_server/Types/RobotState/: RobotState.dtx  RobotState.pjx
staubli_robot_driver/val3/userapp/ros2_server/Types/RobotStateMsg/: RobotStateMsg.dtx  RobotStateMsg.pjx  start.pgx  stop.pgx
staubli_robot_driver/val3/userapp/ros2_server/Types/ThrottleLogMsg/: ThrottleLogMsg.dtx  ThrottleLogMsg.pjx
staubli_robot_driver/val3/userapp/ros2_server/Utils/: logThrottleMsg.pgx
