<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>staubli_driver_ros2</name>
  <version>0.1.3</version>
  <description>Meta-package aggregating the staubli_driver_ros2 packages and documentation</description>

  <maintainer email="thibault.poignonec@gmail.com">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>
  <author email="thibault.poignonec@gmail.com">Thibault Poignonec</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>python3-sphinx</build_depend>
  <build_depend>doxygen</build_depend>

  <exec_depend>staubli_bringup</exec_depend>
  <exec_depend>staubli_moveit_config</exec_depend>
  <exec_depend>staubli_robot_description</exec_depend>
  <exec_depend>staubli_robot_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
