<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>staubli_robot_description</name>
  <version>0.1.2</version>
  <description>Description package for Staubli robots</description>
  <maintainer email="thibault.poignonec@gmail.com">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>
  <author email="thibault.poignonec@gmail.com">Thibault Poignonec</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>launch</test_depend>
  <test_depend>urdf</test_depend>
  <test_depend>xacro</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
