<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>staubli_robot_driver</name>
  <version>0.1.3</version>
  <description>ROS 2 driver for Staubli robots using UDP communication</description>
  <maintainer email="thibault.poignonec@gmail.com">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>
  <author email="thibault.poignonec@gmail.com">Thibault Poignonec</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
